--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,20 @@
 html,
 body {
-  /* height: 100%; is necessary here for so that #app will be 100% */
   height: 100%;
-  padding: 0;
+  padding: .5rem;
   margin: 0;
-  font-family: "Open Sans", Hevetica, Verdana, Arial, sans-serif;
-  font-size: 14px;
-  color: #212e35;
+}
+
+body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
