--- a/components/Search/Search.module.css
+++ b/components/Search/Search.module.css
@@ -1,14 +1,20 @@
-#search {
-  display: flex;
-  flex-direction: column;
+.search {
+  display: grid;
+  /* 1fr means it will fill the remaining space for each of these. auto grows as large as it's content */
+  grid-template-columns: 50% 1fr;
+  grid-template-rows: auto auto 1fr;
+  /* requires all parent elements to also be height: 100% in order to work */
   height: 100%;
 }
 
-.resultsAndMap {
-  display: flex;
-  height: 100%;
+.header,
+.filters {
+  grid-column: 1 / span 2;
 }
 
 .searchResults {
-  width: 50%;
+  /* overflow needs to be on the main parent for SearchResults. adding it to the SearchResults component just causes the
+  page height to increase instead of making the content scroll */
+  overflow-y: auto;
+  padding: 0 1rem 0.5rem 0;
 }
