--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,24 @@
+/* setting 100% height on all parent elements makes it so we can set height: 100% on .search instead of having to do
+height: calc(100vh - 2rem) to account for the padding on <body> below. it works either way, but using calc() feels sort
+of awkward */
 html,
-body {
-  height: 100%;
-  padding: .5rem;
-  margin: 0;
-}
-
-body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-}
-
+body,
 #__next {
-  display: flex;
-  flex-direction: column;
   height: 100%;
+}
+
+body {
+  font-family: -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    "Helvetica Neue",
+    sans-serif;
+  margin: 0;
+  padding: 1rem;
 }
 
 *, *:before, *:after {
