--- a/components/form/RadioButtonGroup/RadioButtonGroup.module.css
+++ b/components/form/RadioButtonGroup/RadioButtonGroup.module.css
@@ -6,38 +6,12 @@
     0px 1px 3px rgba(0, 0, 0, 0.06);
 }
 
-.radioButtonGroupInput {
-  position: absolute;
-  opacity: 0;
-  margin: 0;
-}
-
-.radioButtonGroupInput[type=radio]:checked + label{
-  background: #5092d3;
-  color: white;
-}
-
-.radioButtonGroupLabel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  width: 48px;
-  height: 40px;
-  font-size: 14px;
-  border-left: 1px solid #e7e7e7;
-}
-
-.radioButtonGroupLabel:first-of-type {
+.radioButtonGroup > div:first-child > label {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 
-.radioButtonGroupLabel:last-of-type {
+.radioButtonGroup > div:last-child > label {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-}
-
-.radioButtonGroupLabel:hover {
-  background: #F6F6F6;
 }
