--- a/components/form/ListingStatus/ListingStatus.module.css
+++ b/components/form/ListingStatus/ListingStatus.module.css
@@ -1,4 +1,5 @@
-.statusLabel {
-  display: block;
-  margin-bottom: .5rem;
+.listingStatusList {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
