--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -13,3 +13,22 @@
  width: 1rem;
  height: 1rem; 
 }
+
+
+.inputList {
+  list-style: none;
+  margin: 0;
+  padding: 1rem 1rem .5rem 1rem;
+}
+
+.inputListItem {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  padding-bottom: .5rem;
+}
+
+.inputListLabel {
+  user-select: none;
+  padding-left: .5rem;
+}
