--- a/components/form/OutlinedButton/OutlinedButton.module.css
+++ b/components/form/OutlinedButton/OutlinedButton.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  border: 1px solid #cccccc;;
+  border: 1px solid #cccccc;
   border-radius: 6px;
   padding: 0.6rem .8rem;
   background: #fefefe;
