--- a/components/listings/ListingCardImage/ListingCardImage.module.css
+++ b/components/listings/ListingCardImage/ListingCardImage.module.css
@@ -1,3 +1,9 @@
 .listingCardImage {
   position: relative;
 }
+
+.favoriteButtonContainer {
+  position: absolute;
+  right: 0;
+  margin: .5rem;
+}
