--- a/components/header/HeaderLinks/HeaderLinks.module.css
+++ b/components/header/HeaderLinks/HeaderLinks.module.css
@@ -5,11 +5,10 @@
 }
 
 .link {
-  color: MediumPurple;
+  color: inherit;
   text-decoration: none;
-  font-weight: 600;
 }
 
 .link:hover {
-  color: RebeccaPurple;
+  color: gray;
 }
