--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -21,11 +21,11 @@
   padding: 1rem 1rem .5rem 1rem;
 }
 
-.inputListItem {
+.inputListItem + .inputListItem {
   display: flex;
   align-items: center;
   white-space: nowrap;
-  padding-bottom: .5rem;
+  padding-top: .5rem;
 }
 
 .inputListLabel {
