--- a/containers/ListingDetail/ListingDetail.module.css
+++ b/containers/ListingDetail/ListingDetail.module.css
@@ -12,7 +12,6 @@
 
 .gallery {
   height: 30rem;
-  margin-bottom: 1rem;
 }
 
 .galleryImage {
@@ -21,20 +20,6 @@
   object-fit: cover;
   width: 100%;
   height: 30rem;
-}
-
-.status {
-  display: inline-block;
-  border-radius: 6px;
-  padding: 0.3rem .4rem;
-  background: #fefefe;
-  border: 1px solid #cccccc;
-}
-
-.statusActive {
-  composes: status;
-  border: 1px solid green;
-  color: green;
 }
 
 .price {
@@ -72,7 +57,6 @@
 
 .detailsList > li {
   display: grid;
-  /* grid-gap: 1rem; */
   grid-template-columns: minmax(100px, 34%) auto;
   grid-template-rows: auto auto;
 }
@@ -82,6 +66,7 @@
 }
 
 .status,
+.gallery,
 .price,
 .neighborhood,
 .address,
