Refactored style for ListingDetail

--- a/containers/ListingDetail/ListingDetail.module.css
+++ b/containers/ListingDetail/ListingDetail.module.css
@@ -5,6 +5,9 @@
 }
 
 .listingDetail {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
   margin: 0 auto;
   width: 50rem;
   padding: 1rem 0 2rem 0;
@@ -46,6 +49,14 @@
   column-gap: .5rem;
 }
 
+.heading {
+  margin-top: 0;
+}
+
+.comments {
+  margin: 0;
+}
+
 .detailsList {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -63,14 +74,4 @@
 
 .detailsName {
   color: #767676;
-}
-
-.status,
-.gallery,
-.price,
-.neighborhood,
-.address,
-.stats,
-.description {
-  margin-bottom: 1rem;
 }
