--- a/components/listings/ListingCard/ListingCard.module.css
+++ b/components/listings/ListingCard/ListingCard.module.css
@@ -8,21 +8,16 @@
 }
 
 .price {
-  font-size: 1.25rem;
-  font-weight: 600;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .bedBathSqft {
   display: flex;
+  column-gap: .4rem;
 }
 
 .price,
 .bedBathSqft {
   margin-bottom: .5rem;
-}
-
-.beds,
-.baths,
-.sqft {
-  margin-right: .5rem;
 }
