--- a/containers/SearchResults/SearchResults.module.css
+++ b/containers/SearchResults/SearchResults.module.css
@@ -1,6 +1,6 @@
 .searchResultsList {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(17.5rem, 1fr));
   gap: .8rem;
   list-style: none;
   margin: 0;
