--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -18,7 +18,7 @@
 .inputList {
   list-style: none;
   margin: 0;
-  padding: 1rem 1rem .5rem 1rem;
+  padding: 1rem;
 }
 
 .inputListItem + .inputListItem {
