--- a/components/form/MenuButton/MenuButton.module.css
+++ b/components/form/MenuButton/MenuButton.module.css
@@ -13,7 +13,7 @@
   box-shadow: 0px 9px 12px rgba(0, 0, 0, 0.06),
     0px 3px 16px rgba(0, 0, 0, 0.04),
     0px 5px 6px rgba(0, 0, 0, 0.06);
-  background: #fefefe;
+  background: var(--background);
 }
 
 .open {
