--- a/components/form/LotSize/LotSize.module.css
+++ b/components/form/LotSize/LotSize.module.css
@@ -1,16 +1,15 @@
 .lotSizeDropdown {
   width: 100%;
   cursor: pointer;
-  border: 1px solid #cccccc;;
+  border: 1px solid var(--outline);
   border-radius: 0.375rem;
   height: 2.5rem;
   padding: 0 .8rem;
-  background: #fefefe;
   font-size: inherit;
   font-family: inherit;
   color: inherit;
 }
 
 .lotSizeDropdown:hover {
-  background: #f6f6f6;
+  background: var(--highlight);
 }
