--- a/components/form/SearchButton/SearchButton.module.css
+++ b/components/form/SearchButton/SearchButton.module.css
@@ -5,10 +5,10 @@
   border: none;
   cursor: pointer;
   padding: 0 8px;
-  background: MediumPurple;
+  background: var(--primary);
   border-radius: 0 6px 6px 0;
 }
 
 .searchButton:hover {
-  background: RebeccaPurple;
+  background: var(--primary-variant-one);
 }
