--- a/components/form/SortMenu/SortMenu.module.css
+++ b/components/form/SortMenu/SortMenu.module.css
@@ -11,17 +11,16 @@
 
 .sortByDropdown {
   cursor: pointer;
-  border: 1px solid #cccccc;;
+  border: 1px solid var(--outline);
   border-radius: 6px;
   padding: 0.3rem;
-  background: #fefefe;
   font-size: inherit;
   font-family: inherit;
   color: inherit;
 }
 
 .sortByDropdown:hover {
-  background: #f6f6f6;
+  background: var(--highlight);
 }
 
 .sortByDropdownHighlighted {
