--- a/components/listings/ListingStatusIndicator/ListingStatusIndicator.module.css
+++ b/components/listings/ListingStatusIndicator/ListingStatusIndicator.module.css
@@ -2,8 +2,7 @@
   display: inline-block;
   border-radius: 6px;
   padding: 0.3rem .4rem;
-  background: #fefefe;
-  border: 1px solid #cccccc;
+  border: 1px solid var(--outline);
 }
 
 .statusActive {
