--- a/components/map/ListingMarkerContent/ListingMarkerContent.module.css
+++ b/components/map/ListingMarkerContent/ListingMarkerContent.module.css
@@ -1,7 +1,7 @@
 .listingMarker {
   cursor: pointer;
-  background-color: white;
-  color: inherit;
+  background-color: var(--listing-marker-background);
+  color: var(--listing-marker-foreground);
   border-radius: .8rem;
   min-width: 3rem;
   min-height: 1.5rem;
@@ -26,7 +26,7 @@
 
 .popup {
   border-radius: .8rem;
-  background-color: white;
+  background-color: var(--background);
   opacity: 0;
   width: 0;
   height: 0;
@@ -79,6 +79,6 @@
 }
 
 .link:visited .listingMarker {
-  background-color: rgb(224, 224, 224);
-  color: rgb(60, 60, 60);
+  background-color: var(--listing-marker-background-visited);
+  color: var(--listing-marker-foreground-visited);
 }
