--- a/styles/forms.module.css
+++ b/styles/forms.module.css
@@ -5,7 +5,7 @@
 .input {
   padding: 0.6rem .8rem;
   border-radius: 0.375rem;
-  border: 1px solid rgb(134, 144, 153);
+  border: 1px solid var(--outline);
   font-size: inherit;
 }
 
