Refactored & renamed some theme variable names

--- a/components/form/ContainedButton/ContainedButton.module.css
+++ b/components/form/ContainedButton/ContainedButton.module.css
@@ -14,7 +14,7 @@
 }
 
 .containedButton:hover {
-  background: var(--primary-variant-one);
+  background: var(--primary-dark);
 }
 
 .containedButton.highlighted {
