--- a/components/form/SortMenu/SortMenu.module.css
+++ b/components/form/SortMenu/SortMenu.module.css
@@ -21,7 +21,7 @@
 }
 
 .sortByDropdown:hover {
-  background: var(--primary-variant-three);
+  background: var(--primary-light);
 }
 
 .sortByDropdownHighlighted {
