--- a/components/header/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/components/header/ThemeSwitcher/ThemeSwitcher.module.css
@@ -20,7 +20,7 @@
 }
 
 .themeSwitcherDropdown:hover {
-  background: var(--primary-variant-three);
+  background: var(--primary-light);
 }
 
 .themeSwitcherDropdownHighlighted {
