--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,7 @@ body,
   --foreground: #e0e0e0;
   --foreground-disabled: #b3b3b3;
   --primary: #b79bf0;
+  --primary-dark: #e1d8f1;
   --primary-light: MediumPurple;
   --listing-marker-background: #22272e;
   --listing-marker-foreground: #e0e0e0;
