--- a/components/form/RadioButtonGroup/RadioButtonGroup.module.css
+++ b/components/form/RadioButtonGroup/RadioButtonGroup.module.css
@@ -1,17 +1,4 @@
 .radioButtonGroup {
   display: flex;
-  border-radius: 4px;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.04),
-    0px 2px 2px rgba(0, 0, 0, 0.02),
-    0px 1px 3px rgba(0, 0, 0, 0.06);
-}
-
-.radioButtonGroup > div:first-child > label {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.radioButtonGroup > div:last-child > label {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
+  column-gap: .5rem;
 }
