Changed ListingResultsPagination to use MenuButton instead of select menu

--- a/components/form/OutlinedButton/OutlinedButton.module.css
+++ b/components/form/OutlinedButton/OutlinedButton.module.css
@@ -21,4 +21,5 @@
 .outlinedButtonHighlighted {
   composes: outlinedButton;
   background: var(--primary-light);
+  border-color: var(--primary);
 }
