--- a/components/form/OutlinedButton/OutlinedButton.module.css
+++ b/components/form/OutlinedButton/OutlinedButton.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   cursor: pointer;
   border: 1px solid var(--outline);
-  border-radius: 6px;
+  border-radius: 1.25rem;
   height: 40px;
   padding: 0 .8rem;
   background: inherit;
