Use rem units for OutlinedButton

--- a/components/form/OutlinedButton/OutlinedButton.module.css
+++ b/components/form/OutlinedButton/OutlinedButton.module.css
@@ -4,7 +4,7 @@
   cursor: pointer;
   border: 1px solid var(--outline);
   border-radius: 1.25rem;
-  height: 40px;
+  height: 2.5rem;
   padding: 0 .8rem;
   background: inherit;
   font-size: inherit;
