--- a/components/form/SearchButton/SearchButton.module.css
+++ b/components/form/SearchButton/SearchButton.module.css
@@ -2,13 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: none;
   cursor: pointer;
-  padding: 0 8px;
-  background: var(--search-button);
-  border-radius: 0 6px 6px 0;
+  border: none;
+  border-radius: 0 1.25rem 1.25rem 0;
+  width: 3rem;
+  background-color: var(--search-button-background);
 }
 
 .searchButton:hover {
-  background: var(--search-button-hover);
+  background-color: var(--search-button-background-hover);
 }
