Fixed css bug on Safari
Using flex-direction column seems to create a large gap between flex children, regardless of whether "gap" is specified or omitted. Using grid seems to work much better across all browsers.

--- a/containers/More/More.module.css
+++ b/containers/More/More.module.css
@@ -1,7 +1,6 @@
 .more {
-  display: flex;
-  flex-direction: column;
-  row-gap: 1rem;
+  display: grid;
+  gap: 1rem;
   min-width: 16rem;
   padding: 1rem;
 }
