--- a/components/form/BedsAndBaths/BedsAndBaths.module.css
+++ b/components/form/BedsAndBaths/BedsAndBaths.module.css
@@ -1,7 +1,6 @@
 .bedsAndBaths {
+  display: grid;
+  gap: 1rem;
   padding: 1rem;
   min-height: 12rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
