--- a/components/form/OutlinedButton/OutlinedButton.module.css
+++ b/components/form/OutlinedButton/OutlinedButton.module.css
@@ -9,7 +9,7 @@
   background: inherit;
   font-size: inherit;
   font-family: inherit;
-  color: inherit;
+  color: var(--foreground);
 }
 
 .outlinedButton:hover {
@@ -21,5 +21,6 @@
 .outlinedButtonHighlighted {
   composes: outlinedButton;
   background: var(--primary-light);
+  color: var(--primary);
   border-color: var(--primary);
 }
