--- a/components/form/SortMenu/SortMenu.module.css
+++ b/components/form/SortMenu/SortMenu.module.css
@@ -1,30 +1,27 @@
-.sortMenu {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  flex-grow: 1;
+.menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  min-width: 10.5rem;
 }
 
-.sortLabel {
-  margin-right: .3rem;
-}
-
-.sortByDropdown {
+.menuItem {
+  display: grid;
+  grid-template-columns: 1.5rem auto;
   cursor: pointer;
-  border: 1px solid var(--outline);
-  border-radius: 6px;
-  padding: 0.3rem;
-  font-size: inherit;
-  font-family: inherit;
-  background: inherit;
-  color: inherit;
+  padding: .5rem;
 }
 
-.sortByDropdown:hover {
-  background: var(--primary-light);
+.menuItem:first-child {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
-.sortByDropdownHighlighted {
-  composes: sortByDropdown;
-  background: rgba(4, 87, 175, 0.24);
+.menuItem:last-child {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.menuItem:hover {
+  background-color: var(--primary-light);
 }
