--- a/components/form/SearchTypeSelector/SearchTypeSelector.module.css
+++ b/components/form/SearchTypeSelector/SearchTypeSelector.module.css
@@ -34,22 +34,22 @@
   border-color: var(--primary);
 }
 
-.input {
+.radio {
   position: absolute;
   opacity: 0;
   margin: 0;
 }
 
-.input[type=radio]:focus + .label {
+.radio:focus + .label {
   outline: solid 2px var(--focus);
   outline-offset: 1px;
 }
 
-.input[type=radio]:checked:focus + .label {
+.radio:checked:focus + .label {
   outline-color: var(--primary-dark);
 }
 
-.input[type=radio]:checked + .label {
+.radio:checked + .label {
   background: var(--primary);
   border-color: var(--primary);
   color: var(--background);
